fix: slider issue

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,75 @@
     <title>Zeta Develops - Contact Us</title>
   </head>
   <body style="background: #010610">
+    <header class="main-nav">
+      <div class="container">
+        <div class="nav-wrapper">
+          <a href="/">
+            <img
+              class="nav-logo"
+              src="/assets/images/logo.png"
+              alt="footer-logo"
+            />
+          </a>
+
+          <div class="nav-items">
+            <ul>
+              <li><a href="/case-study.html">Case studies</a></li>
+              <li><a href="/contact.html">Contact</a></li>
+            </ul>
+            <button class="btn menu-btn">Book a free review</button>
+          </div>
+
+          <div class="humburger">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="humburger-close"
+            >
+              <path
+                d="M19 4.99988L5 18.9999M5 4.99988L19 18.9999"
+                stroke="white"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="humburger-open"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3 5C3 4.44772 3.44772 4 4 4H20C20.5523 4 21 4.44772 21 5C21 5.55229 20.5523 6 20 6H4C3.44772 6 3 5.55228 3 5Z"
+                fill="white"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3 12C3 11.4477 3.44772 11 4 11H20C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13H4C3.44772 13 3 12.5523 3 12Z"
+                fill="white"
+              />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M3 19C3 18.4477 3.44772 18 4 18H20C20.5523 18 21 18.4477 21 19C21 19.5523 20.5523 20 20 20H4C3.44772 20 3 19.5523 3 19Z"
+                fill="white"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </header>
+
     <main>
       <!-- Contact Form -->
       <section id="form-section">
@@ -72,5 +141,44 @@
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer-wrapper">
+        <div class="container footer-inner">
+          <div>
+            <img
+              class="footer-logo"
+              src="/assets/images/logo.png"
+              alt="footer-logo"
+            />
+            <div class="footer-social">
+              <a href="#">Instagram</a>
+              <a href="#">Twitter</a>
+            </div>
+          </div>
+
+          <div>
+            <div class="footer-menu">
+              <a href="/index.html">Home</a>
+              <a href="/case-study.html">Case Studies</a>
+              <a href="/contact.html">Contact us</a>
+            </div>
+            <p class="copyright-text">Copyright© Zeta Develops</p>
+          </div>
+        </div>
+        <div class="footer-mobile">
+          <div class="footer-mb-menu">
+            <a href="/index.html">Home</a>
+            <a href="/case-study.html">Case Studies</a>
+            <a href="/contact.html">Contact us</a>
+          </div>
+          <div class="footer-mb-social">
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+          </div>
+        </div>
+        <p class="copyright-mb-text">Copyright© Zeta Develops</p>
+      </div>
+    </footer>
   </body>
 </html>
