--- a/index.html
+++ b/index.html
@@ -927,18 +927,18 @@
 
           <div>
             <div class="footer-menu">
-              <a href="#">Home</a>
-              <a href="#">Case Studies</a>
-              <a href="#">Contact us</a>
+              <a href="/index.html">Home</a>
+              <a href="/case-study.html">Case Studies</a>
+              <a href="/contact.html">Contact us</a>
             </div>
             <p class="copyright-text">Copyright© Zeta Develops</p>
           </div>
         </div>
         <div class="footer-mobile">
           <div class="footer-mb-menu">
-            <a href="#">Home</a>
-            <a href="#">Case Studies</a>
-            <a href="#">Contact us</a>
+            <a href="/index.html">Home</a>
+            <a href="/case-study.html">Case Studies</a>
+            <a href="/contact.html">Contact us</a>
           </div>
           <div class="footer-mb-social">
             <a href="#">Instagram</a>
