--- a/contact.html
+++ b/contact.html
@@ -142,6 +142,7 @@
       </section>
     </main>
 
+    <!-- footer -->
     <footer class="footer">
       <div class="footer-wrapper">
         <div class="container footer-inner">
